<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="io.github.megadragon.musthavefreeware.AIDA64Activity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:text="@string/aida64"
			android:textSize="30sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/aida64_summary" />

		<HorizontalScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_system"
					android:src="@drawable/aida64_system" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_cpu"
					android:src="@drawable/aida64_cpu" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_display"
					android:src="@drawable/aida64_display" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_battery"
					android:src="@drawable/aida64_battery" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_android"
					android:src="@drawable/aida64_android" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_devices"
					android:src="@drawable/aida64_devices" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/aida64_thermal"
					android:src="@drawable/aida64_thermal" />
			</LinearLayout>
		</HorizontalScrollView>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/aida64_description" />

		<Button
			android:id="@+id/aida64_download"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:background="@android:color/holo_green_light"
			android:text="@string/download" />
	</LinearLayout>
</ScrollView>
