<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="io.github.megadragon.musthavefreeware.FBReaderActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:text="@string/fbreader"
			android:textSize="30sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fbreader_summary" />

		<HorizontalScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_menu"
					android:src="@drawable/fbreader_menu" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_library"
					android:src="@drawable/fbreader_library" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_reading"
					android:src="@drawable/fbreader_reading" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_fullscreen"
					android:src="@drawable/fbreader_fullscreen" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_multiselection"
					android:src="@drawable/fbreader_multiselection" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_definition"
					android:src="@drawable/fbreader_definition" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/fbreader_sync"
					android:src="@drawable/fbreader_sync" />
			</LinearLayout>
		</HorizontalScrollView>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/fbreader_description" />

		<Button
			android:id="@+id/fbreader_download"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:background="@android:color/holo_green_light"
			android:text="@string/download" />
	</LinearLayout>
</ScrollView>
