<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="io.github.megadragon.musthavefreeware.CleanerActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:text="@string/ccleaner"
			android:textSize="30sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ccleaner_summary" />

		<HorizontalScrollView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginTop="8dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="horizontal">

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/ccleaner_main"
					android:src="@drawable/ccleaner_main" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/ccleaner_analyze"
					android:src="@drawable/ccleaner_analyze" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/ccleaner_menu"
					android:src="@drawable/ccleaner_menu" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/ccleaner_app_manager"
					android:src="@drawable/ccleaner_app_manager" />

				<ImageView
					style="@style/Screenshot"
					android:contentDescription="@string/ccleaner_system_info"
					android:src="@drawable/ccleaner_system_info" />
			</LinearLayout>
		</HorizontalScrollView>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ccleaner_description" />

		<Button
			android:id="@+id/ccleaner_download"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:background="@android:color/holo_green_light"
			android:text="@string/download" />
	</LinearLayout>
</ScrollView>
